# arena

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  booster.dockerfile  circus.dockerfile  pixi.toml  sim2real_fix.md
assets/: scene.xml
cmake/: aarch64-toolchain.cmake
docs/: ARCHITECTURE.md  ARENA_PLAN.md  BOOSTER_DEPLOY_ANALYSIS.md  BUILDCHAIN_AND_SIM_INTEGRATION.md  CIRCUS_NO_BOOSTER.md  GUIDE.md  LAUNCH_ARCHITECTURE.md  OBSERVATIONS.md  README.md  SIM2SIM_CPP_PLAN.md  SIM2SIM_INTEGRATION_PLAN.md  SYSTEM_ARCHITECTURE.md
include/: GaitPhaseCommand.h  ModelConfig.h  ModelRegistry.h  ObservationSpec.h  Policy.h  RobotConfig.h  RobotData.h  RobotState.h  TaskConfig.h  TaskRegistry.h  VelocityCommand.h
include/engines/: IInferenceEngine.h  OnnxInferenceEngine.h  TrtInferenceEngine.h
include/inputs/: DDSRemoteInput.h  IInputSource.h  JoystickInput.h  KeyboardInput.h
include/portals/: CircusPortal.h  IPortal.h  MujocoPortal.h  RobotPortal.h
models/: models.yaml
models/t1-velocity/: models.yaml
models/t1-velocity-booster/: models.yaml
models/t1-velocity-booster/v1/: t1-velocity-booster_ppo_v1.onnx  t1-velocity-booster_ppo_v1.onnx.data
models/t1-velocity-rma/: models.yaml
models/t1-velocity-rma/test/: t1-velocity-rma_rmappo_test.onnx  t1-velocity-rma_rmappo_test.onnx.data
models/t1-velocity-rma/v0/: t1-velocity-rma_rmappo_v0.onnx  t1-velocity-rma_rmappo_v0.onnx.data
models/t1-velocity-rma/v1/: t1-velocity-rma_rmappo_v1.onnx  t1-velocity-rma_rmappo_v1.onnx.data
models/t1-velocity-rma/v2/: t1-velocity-rma_rmappo_v2.onnx  t1-velocity-rma_rmappo_v2.onnx.data
models/t1-velocity-symmetric/: models.yaml
models/t1-velocity-symmetric/v0/: t1-velocity-symmetric_ppo_v0.onnx  t1-velocity-symmetric_ppo_v0.onnx.data
models/t1-velocity-symmetric/v1/: t1-velocity-symmetric_ppo_v1.onnx  t1-velocity-symmetric_ppo_v1.onnx.data
models/t1-velocity-symmetric/v2/: t1-velocity-symmetric_ppo_v2.onnx  t1-velocity-symmetric_ppo_v2.onnx.data
models/t1-velocity-symmetric/v3/: t1-velocity-symmetric_ppo_v3.onnx  t1-velocity-symmetric_ppo_v3.onnx.data
models/t1-velocity-symmetric/v4/: t1-velocity-symmetric_ppo_v4.onnx  t1-velocity-symmetric_ppo_v4.onnx.data
models/t1-velocity-symmetric/v5/: t1-velocity-symmetric_ppo_v5.onnx  t1-velocity-symmetric_ppo_v5.onnx.data
models/t1-velocity-symmetric/v6/: t1-velocity-symmetric_ppo_v6.onnx  t1-velocity-symmetric_ppo_v6.onnx.data
models/t1-velocity-symmetric/v7/: t1-velocity-symmetric_ppo_v7.onnx  t1-velocity-symmetric_ppo_v7.onnx.data
models/t1-velocity/v0/: t1-velocity_ppo_v0.onnx  t1-velocity_ppo_v0.onnx.data
models/t1-velocity/v1/: t1-velocity_ppo_v1.onnx  t1-velocity_ppo_v1.onnx.data
models/t1-velocity/v2/: t1-velocity_ppo_v2.onnx  t1-velocity_ppo_v2.onnx.data
models/t1-velocity/v3/: t1-velocity_ppo_v3.onnx  t1-velocity_ppo_v3.onnx.data
models/t1-velocity/v4/: t1-velocity_ppo_v4.onnx  t1-velocity_ppo_v4.onnx.data
models/t1-velocity/v5/: t1-velocity_ppo_v5.onnx  t1-velocity_ppo_v5.onnx.data
models/t1-velocity/v6/: t1-velocity_ppo_v6.onnx  t1-velocity_ppo_v6.onnx.data
models/t1-velocity/v7/: t1-velocity_ppo_v7.onnx  t1-velocity_ppo_v7.onnx.data
models/t1-velocity/v8/: t1-velocity_ppo_v8.onnx  t1-velocity_ppo_v8.onnx.data
models/t1-velocity/v9/: t1-velocity_ppo_v9.onnx  t1-velocity_ppo_v9.onnx.data
scripts/: .arena_profiles  arena.service  arena_profile.sh  arena_start.service  arena_stop.service  benchmark.md  dds_debug.service  deploy.sh  docker_entrypoint.sh  docker_entrypoint_booster.sh  docker_entrypoint_circus.sh  pack_channel.sh  pixi_install_aarch64.sh  profile.sh  robot.sh  run.sh  setup.sh  setup_robot.sh  supervisord.conf
sim/: framework_booster.yaml  framework_circus.yaml  scene.yaml
src/: ModelConfig.cpp  ModelRegistry.cpp  TaskRegistry.cpp  arena_start.cpp  arena_stop.cpp  benchmark.cpp  dds_debug.cpp  main.cpp
src/engines/: OnnxInferenceEngine.cpp  TrtInferenceEngine.cpp
src/inputs/: DDSRemoteInput.cpp  JoystickInput.cpp  KeyboardInput.cpp
src/portals/: CircusPortal.cpp  MujocoPortal.cpp  RobotPortal.cpp
src/tasks/: T1Velocity.cpp  T1VelocityBooster.cpp  T1VelocityFlat.cpp  T1VelocityRma.cpp  T1VelocitySymmetric.cpp
tests/: test_policy.cpp
